# littlecheck

./: .gitignore  .pylintrc  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
littlecheck/: __init__.py  littlecheck.py
test/: __init__.py  test_littlecheck.py
test/files/: exe_found.expected  exe_found.expected.license  exe_found.py  exe_not_found.expected  exe_not_found.py  inline-check.expected  inline-check.expected.license  inline-check.py  no_skip.expected  no_skip.py  python_color.expected  python_color.py  python_doublereplace.expected  python_doublereplace.py  python_err1.expected  python_err1.expected.license  python_err1.py  python_extra_output.expected  python_extra_output.py  python_middle_error.expected  python_middle_error.py  python_missing_check.expected  python_missing_check.py  python_missing_output.expected  python_missing_output.py  python_multipe_error_annotation_lines.expected  python_multipe_error_annotation_lines.py  python_multiple_errors.expected  python_multiple_errors.py  python_ok.py  python_out_vs_err.expected  python_out_vs_err.py  python_path_cmd.py  python_shebang.py  python_whitespace.expected  python_whitespace.py  run_spaces.py  shell_skip.py  skip.py
